--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,16 +1,17 @@
 [package]
-name = "tree-sitter-python"
-description = "Python grammar for tree-sitter"
-version = "0.25.0"
+name = "tree-sitter-ord"
+description = "Ord grammar for tree-sitter"
+version = "0.1.0"
 authors = [
+  "Dominik Schwimmbeck <dominik.schwimmbeck@tu-berlin.de>",
   "Max Brunsfeld <maxbrunsfeld@gmail.com>",
   "Amaan Qureshi <amaanq12@gmail.com>",
 ]
-license = "MIT"
+license = "Apache-2.0"
 readme = "README.md"
-keywords = ["incremental", "parsing", "tree-sitter", "python"]
+keywords = ["incremental", "parsing", "tree-sitter", "python", "ord"]
 categories = ["parser-implementations", "parsing", "text-editors"]
-repository = "https://github.com/tree-sitter/tree-sitter-python"
+repository = "https://github.com/schwimmbeck/tree-sitter-ord"
 edition = "2021"
 autoexamples = false
 
