--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,9 +3,9 @@ requires = ["setuptools>=62.4.0", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "tree-sitter-python"
-description = "Python grammar for tree-sitter"
-version = "0.25.0"
+name = "tree-sitter-ord"
+description = "ORD grammar for tree-sitter"
+version = "0.1.0"
 keywords = ["incremental", "parsing", "tree-sitter", "python"]
 classifiers = [
   "Intended Audience :: Developers",
@@ -16,13 +16,14 @@ classifiers = [
 authors = [
   { name = "Max Brunsfeld", email = "maxbrunsfeld@gmail.com" },
   { name = "Amaan Qureshi", email = "amaanq12@gmail.com" },
+  { name = "Dominik Schwimmbeck", email = "dominik.schwimmbeck@tu-berlin.de" },
 ]
 requires-python = ">=3.10"
-license.text = "MIT"
+license.text = "Apache-2.0"
 readme = "README.md"
 
 [project.urls]
-Homepage = "https://github.com/tree-sitter/tree-sitter-python"
+Homepage = "https://github.com/schwimmbeck/tree-sitter-ord"
 
 [project.optional-dependencies]
 core = ["tree-sitter~=0.24"]
